# executable-examination-example-starter

.github/workflows/: build.yml
exam/: gatorgrade.yml  pyproject.toml
exam/questions/: question_one.py
insight/: insight-report-20241023-13-19-03.json  insight-report-20241023-13-20-43.json  insight-report-20241024-16-12-23.json
